# aruco_detector

./: .gitignore  CMakeLists.txt  aruco_detector_params.yml  camera_params.yml  camera_params_1.yml  detector_params.yml  new_transform_from_cam_to_map.yml  out_camera_data.xml  package.xml  test  test.cpp  transform_from_cam_to_map.yml
launch/: aruco_detector.launch  aruco_detector_debug.launch  aruco_detector_single.launch  setup.bash
src/: Makefile  aruco_main.cpp  aruco_marker_classes.cpp  aruco_marker_classes.h  aruco_parameters.h  aruco_scene.cpp  aruco_scene.h  aruco_show_id_node.cpp  aruco_utils.cpp  aruco_utils.h  serialunix.cpp  serialunix.h  time_test.cpp
src/test_data/: Makefile  clasterization.cpp  opencvTest  tvec_1.txt
srv/: ChangeExposure.srv  SetSide.srv
